--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
- 
-} */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 
 *{
   padding: 0;
@@ -10,9 +8,9 @@
   box-sizing: border-box;
 }
 
-/* .app{
-  padding: 1rem;
-} */
+.app{
+  font-family: 'Roboto', sans-serif;
+}
 
 
 
