--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,10 @@
 .header{
     width: 100%;
     box-shadow: 0 4px 2px -2px gray;
-    position: absolute;
+    /* position: absolute; */
+    /* background: linear-gradient(137.44deg,grey 33.66%,#fafafa 84.4%) */
    
-    /* background: linear-gradient(137.44deg,#006be9 33.66%,#004eaa 84.4%); */
+    background: linear-gradient(137.44deg,#006be9 33.66%,#004eaa 84.4%);
    
 }
  /* navbar component */
@@ -19,7 +20,7 @@
     /* box-shadow: 0 4px 2px -2px gray; */
     min-height: 80px;
     /* background: linear-gradient(137.44deg,#006be9 33.66%,#004eaa 84.4%); */
-    color: #ffa500;
+    color: grey;
     top: 0;
     position: sticky;
     z-index: 100;
@@ -38,13 +39,13 @@
 }
 
 .navbar .navigations a{
-   font-weight: 600;
+   font-weight: 800;
 }
 
 .navbar .navigations a:hover{
     transition: all .4s ease;
     cursor: pointer;
-    color: #c5ac7f;
+    color: black;
 }
 
 .logo{
@@ -60,7 +61,7 @@ width: 40%;
     justify-content: space-evenly;
 }
 
-/* navbar component */
+/* welcome component */
 
 .welcome{
     text-align: center;
@@ -71,17 +72,24 @@ width: 40%;
     align-items: center;
     gap: 2rem;
     font-family: Work Sans,sans-serif;
-    border: 2px solid blue;
     min-height: 300px;
     padding-top: 30px;
+    color: whitesmoke;
    
+}
+
+/* .welcome p{
+    color: #2b1919;
+} */
+
+.welcome .name{
+    color: #ffa500;
 }
 
 /* mock component */
 .mock{
     display: flex;
     justify-content: center;
-    border: 2px solid blue;
     gap: 1.5rem;
 }
 .mock img{
