--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+:root{
+  font-family:'Roboto', sans-serif;
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -14,7 +19,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -66,4 +73,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+} */ 
