--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,10 +1,7 @@
 .header{
     width: 100%;
     box-shadow: 0 4px 2px -2px gray;
-    /* position: absolute; */
-    /* background: linear-gradient(137.44deg,grey 33.66%,#fafafa 84.4%) */
-   
-    background: linear-gradient(137.44deg,#006be9 33.66%,#004eaa 84.4%);
+    background: linear-gradient(137.44deg,#432344 33.66%,#8e3791 84.4%); 
    
 }
  /* navbar component */
@@ -16,11 +13,9 @@
     margin: 0 auto;
     padding: 10px 5px;
     font-family: Inter,sans-serif;
-    background-color: white;
-    /* box-shadow: 0 4px 2px -2px gray; */
+    background-color: #e7eefb;
     min-height: 80px;
-    /* background: linear-gradient(137.44deg,#006be9 33.66%,#004eaa 84.4%); */
-    color: grey;
+    color: #ff2525;
     top: 0;
     position: sticky;
     z-index: 100;
@@ -61,6 +56,38 @@ width: 40%;
     justify-content: space-evenly;
 }
 
+.menu-icon{
+    display: none;
+}
+@media all and (width <= 768px) {
+   .navigations a{
+display: none;
+   }
+   .app-download img{
+    display: none;
+       }
+
+       .menu-icon{
+        display: flex;
+           }
+
+       #hidden{
+        position: absolute;
+        top: 70px;
+        height: 80vh;
+        max-height: 1500px;
+        width: 100%;
+        max-width: 100vw;
+        background-color: black;
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        list-style: 40px;
+       }
+  }
 /* welcome component */
 
 .welcome{
@@ -113,6 +140,12 @@ width: 40%;
     
 
 }
+
+@media all and (width <= 768px) {
+  .mock .none{
+    display: none;
+  }
+  }
 
 
 
