--- a/src/components/info/Info.css
+++ b/src/components/info/Info.css
@@ -1,5 +1,6 @@
 .info{
     padding: 30px;
+    background-color: #e7eefb;
 }
 
 .info-first .info-images img{
@@ -16,7 +17,7 @@
     display: flex;
     justify-content: center;
      border-radius: 50px;
-     background: linear-gradient(137.44deg,#006be9 33.66%,#004eaa 84.4%);
+     background: linear-gradient(137.44deg,#432344 33.66%,#8e3791 84.4%); 
     width: 50%;
     
 }
@@ -34,9 +35,29 @@
 }
 
 .info-text h2{
-    color: #006be9;
+    color: #ffc03d;
+    font-weight: 900;
+
 }
 
 .info-text p{
     font-weight: 600;
+    color: #432344;
+    text-align: center;
+    margin-top: 20px;
 }
+
+
+@media all and (width <= 768px) {
+    .info-first{
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info-images,.info-text{
+        margin-top: 10px;
+        font-size: 20px;
+    }
+  }
