--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,6 +3,7 @@
     background: linear-gradient(137.44deg,#432344 33.66%,#8e3791 84.4%); 
     color: #e7eefb;
     font-weight: 900;
+   
   }
   
   .footer {
@@ -27,6 +28,7 @@
   .footer-two .footer-two-link li {
     margin-bottom: 20px;
      color: #e7eefb;
+     list-style: none;
   }
   
   .footer-three h5 {
@@ -55,7 +57,8 @@
     width: 30%;
     padding: 14px;
     font-weight: 700;
-    color: #ff2525;
+    color: #f1f1f1;
+    font-weight: 700;
     background-color:  #ffc03d;
     border: none;
     outline: none;
@@ -74,7 +77,7 @@
   .footer-end {
     font-size: 16px;
     font-family: "Cairo", sans-serif;
-    color:  #ff2525;
+    color:  #fafafa;
     font-weight: 400;
     line-height: 26px;
     margin: 5px 0 10px 0;
